[package]
name = "tabaqui"
version = "0.2.0"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

[dependencies]
dotenv = "^0.14"
failure = "^0.1"
log = "^0.4"
env_logger = "^0.7"
clap = { version = "^2.33", features = ["yaml"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

json-utils = "^0.3"
futures = "^0.1"
tokio = "^0.1"
warp = "^0.1"
hyper = "^0.12"
bytes = "^0.4"
chrono = "^0.4"